--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
         "symfony/http-foundation": "5.4.30",
         "symfony/yaml": "5.4.30",
         "twig/twig": "3.7.1",
-        "vlucas/phpdotenv": "5.5.0",
+        "vlucas/phpdotenv": "^5.6",
         "waryway/php-traits-library": "1.0.4",
         "yubico/u2flib-server": "1.0.2",
         "twilio/sdk": "7.12.0"
